# FDPS_SPH

./: .gitignore  .travis.yml  CMakeLists.txt  CloneFDPS.sh  LICENSE  README.md  run.sh
contrib/ci/: ci.sh
contrib/utilities/: astyle.rc  indent
eos/: ANEOS_conversion.general.py  ANEOS_conversion.py  ANEOS_conversion_mod.py  ANEOS_entropy_test.py  dunite.rho_u.txt  dunite2.rho_u.txt  dunite3.rho_u.txt  duniteN.rho_u.txt  duniteS.rho_u.txt  duniteS2.rho_u.txt  dunite_.rho_u.txt  dunite_.table.txt  forst_STS.rho_u.txt  granite.rho_u.txt  granite.table.txt  ironC.rho_u.txt  ironS2.rho_u.txt  iron_STS.rho_u.txt  iron___.rho_u.txt  iron___.table.txt
examples/: GI.txt  GI_MPI.txt  GI_dunite4.txt  GI_small.txt  gi.txt  impactor.txt  impactor2.txt  impactor_dunite4.txt  input.txt  target.txt  target_dunite4.txt
examples/example_with_pipeline/: README  bodies_inputtxt.py  collision_inputtxt.py  combine_prepare_files.py  minimaldefinitions.py  profiles.py
input/: col.txt  imp.txt  input.txt  tar.txt
src/: EoS.h  GI.h  GI.integrated.h  GI.original.h  Makefile  Makefile.GPU  class.h  class_device.hpp  debug.h  force.h  input.txt  integral.h  interpolation.h  io.h  kernel.cu  kernel.cuh  kernel.h  main.cpp  mathfunc.h  param.h  parse.h  shocktube.h  sph.out
src/init/: .GI.h.swp  GI.h  input.txt  test.h  test_output.txt
